[package]
name = "solana-verify"
version = "0.4.14"
edition = "2021"
description = "A CLI tool for building verifiable Solana programs"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = { version = "1.2.1", features = ["derive"] }
bs58 = "0.5.1"
cargo-lock = "10.1.0" # missing in workspace
cargo_toml = "0.22" # missing in workspace
clap = "2.33.1" # version of v1.18 does not support derive
crossbeam-channel = "0.5.11"
hex = "0.4.3"
indicatif = "0.17.7"
lazy_static = "1.4.0"
pathdiff = "0.2.0" # missing in workspace
regex = "1.11.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha256 = "1.1.1" # missing in workspace
signal-hook = "0.3.17"
solana-account-decoder-client-types = "=3.1.9"
solana-address = { version = "=2.2.0", features = ["decode"] }
solana-clap-utils = "=3.1.9"
solana-cli-config = "=3.1.9"
solana-compute-budget-interface = "=3.0.0"
solana-instruction = "=3.2.0"
solana-keypair = "=3.1.1"
solana-loader-v3-interface = "6.1"
solana-rpc-client = "=3.1.9"
solana-rpc-client-api = "=3.1.9"
solana-sdk-ids = "3.1.0"
solana-system-interface = "3.1"
solana-transaction = { version = "=3.1.0", features = ["bincode"] }
solana-transaction-status-client-types = "=3.1.9"
tokio = { version = "1.29.1", features = ["full"] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    # Lets you generate random UUIDs
    "fast-rng",
    # Use a faster (but still sufficiently random) RNG
    # Enable better diagnostics for compile-time UUIDs
    "macro-diagnostics",
]
